# n8n_agents

./: .gitignore  Dockerfile  README.md  docker-compose.yml  n8n.Dockerfile  ollama.Dockerfile  pyproject.toml  texto.txt
backup/scripts/: backup.sh
calc/: mathtool.Dockerfile  requirements.txt
calc/app/: main.py
qdrant_dev/: embed_qdrant.py  formating_xlsx.py
qdrant_dev/data/: digital_states_tratado.xlsx
qdrant_storage/: raft_state.json
qdrant_storage/collections/digital_state_sets/: payload_index.json
qdrant_storage/collections/digital_state_sets/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/digital_state_sets/0/segments/03df4208-d3e3-4b85-9a87-21b5cdc31d76/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/digital_state_sets/0/segments/2e1440d9-fb84-4821-9b7c-b61c695528d3/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/digital_state_sets/0/segments/4573a06b-7082-41e0-9d13-fbcae0698e44/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/digital_state_sets/0/segments/958ea66f-dbea-4679-87ff-4701fd999043/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/digital_state_sets/0/segments/abc6bc56-bff2-47d5-8bff-c97040df8c5b/: mutable_id_tracker.mappings
qdrant_storage/collections/digital_state_sets/0/segments/c61e1a4f-0e80-4337-8f2d-aa7d1400e341/: mutable_id_tracker.mappings
redis_data/: dump.rdb
(+6 files in other folders)
